--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
     "nodemon": "^1.2.1"
   },
   "dependencies": {
-    "body-parser": "^1.9.0",
-    "browserify": "^5.12.0",
+    "body-parser": "^1.9.3",
+    "browserify": "^6.3.3",
     "catw": "^0.2.0",
-    "cerebellum": "git+https://bitbucket.org/SC5/cerebellum.git",
-    "compression": "^1.1.0",
-    "connect-mongostore": "^0.1.3",
+    "cerebellum": "git+https://bitbucket.org/SC5/cerebellum.git#528b1fb",
+    "compression": "^1.2.1",
+    "connect-mongostore": "^0.1.4",
     "cookie-parser": "^1.3.3",
     "dotenv": "^0.4.0",
     "ejs": "^1.0.0",
-    "express": "^4.9.5",
-    "express-session": "^1.8.2",
-    "less": "^1.7.5",
+    "express": "^4.10.4",
+    "express-session": "^1.9.2",
+    "less": "^2.1.1",
     "lodash": "^2.4.1",
-    "mongoose": "^3.8.17",
+    "mongoose": "^3.8.19",
     "native-promise-only": "^0.7.6-a",
-    "node-jsx": "^0.11.0",
+    "node-jsx": "^0.12.4",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
-    "react": "^0.11.2",
-    "react-bootstrap": "^0.12.0",
-    "reactify": "^0.14.0",
+    "react": "^0.12.1",
+    "react-bootstrap": "^0.13.0",
+    "reactify": "^0.17.1",
     "uglify-js": "^2.4.15",
-    "watchify": "1.0.6"
+    "watchify": "2.1.1"
   },
   "browser": {
     "./config/api.js": "./config/api-browser.js"
