Updated repository url to package.json

--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/SC5/cerebellum-urls"
+    "url": "https://github.com/SC5/cerebellum-urls.git"
   }
 }
