--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "npm run build_lib & npm run build_app & npm run build_less",
     "build_min": "uglifyjs public/js/lib.js public/js/app.js -o public/js/app.min.js",
-    "build_lib": "browserify -r cerebellum -r react/addons -r react-bootstrap -u jquery -u underscore -o public/js/lib.js",
-    "build_app": "browserify -x cerebellum -x react/addons -x react-bootstrap client.js -t reactify -o public/js/app.js",
+    "build_lib": "browserify -r cerebellum -r react -r react-bootstrap -u jquery -u underscore -o public/js/lib.js",
+    "build_app": "browserify -x cerebellum -x react -x react-bootstrap client.js -t babelify -o public/js/app.js",
     "build_less": "lessc less/styles.less public/css/styles.css",
-    "watch_lib": "watchify -r cerebellum -r react/addons -r react-bootstrap -u jquery -u underscore -o public/js/lib.js -v",
-    "watch_app": "watchify -x cerebellum -x react/addons -x react-bootstrap client.js -u jquery -u underscore -d -t reactify -o public/js/app.js -v",
+    "watch_lib": "watchify -r cerebellum -r react -r react-bootstrap -u jquery -u underscore -o public/js/lib.js -v",
+    "watch_app": "watchify -x cerebellum -x react -x react-bootstrap client.js -u jquery -u underscore -d -t babelify -o public/js/app.js -v",
     "watch_less": "catw -c 'lessc -' 'less/styles.less' -o public/css/styles.css -v",
     "watch": "npm run watch_app & npm run watch_lib & npm run watch_less",
     "start": "nodemon server.js",
@@ -22,10 +22,12 @@
     "nodemon": "^1.2.1"
   },
   "dependencies": {
+    "babel": "^5.0.9",
+    "babelify": "^6.0.2",
     "body-parser": "^1.9.3",
     "browserify": "^6.3.3",
     "catw": "^0.2.0",
-    "cerebellum": "^0.5.1",
+    "cerebellum": "sc5/cerebellum",
     "compression": "^1.2.1",
     "connect-mongostore": "^0.1.4",
     "cookie-parser": "^1.3.3",
@@ -36,12 +38,10 @@
     "lodash": "^2.4.1",
     "mongoose": "^3.8.19",
     "native-promise-only": "^0.7.6-a",
-    "node-jsx": "^0.12.4",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
-    "react": "^0.12.1",
-    "react-bootstrap": "^0.13.0",
-    "reactify": "^0.17.1",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.20.2",
     "uglify-js": "^2.4.15",
     "watchify": "2.1.1"
   },
