Converted relevant code to ES6. Converted React components to ES6 format. Use Cerebellum's new route format.

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "npm run build_lib & npm run build_app & npm run build_less",
     "build_min": "uglifyjs public/js/lib.js public/js/app.js -o public/js/app.min.js",
-    "build_lib": "browserify -r cerebellum -r react -r react-bootstrap -u jquery -u underscore -o public/js/lib.js",
+    "build_lib": "browserify -r cerebellum -r react -r react-bootstrap -o public/js/lib.js",
     "build_app": "browserify -x cerebellum -x react -x react-bootstrap client.js -t babelify -o public/js/app.js",
     "build_less": "lessc less/styles.less public/css/styles.css",
-    "watch_lib": "watchify -r cerebellum -r react -r react-bootstrap -u jquery -u underscore -o public/js/lib.js -v",
-    "watch_app": "watchify -x cerebellum -x react -x react-bootstrap client.js -u jquery -u underscore -d -t babelify -o public/js/app.js -v",
+    "watch_lib": "watchify -r cerebellum -r react -r react-bootstrap -o public/js/lib.js -v",
+    "watch_app": "watchify -x cerebellum -x react -x react-bootstrap client.js -d -t babelify -o public/js/app.js -v",
     "watch_less": "catw -c 'lessc -' 'less/styles.less' -o public/css/styles.css -v",
     "watch": "npm run watch_app & npm run watch_lib & npm run watch_less",
-    "start": "node-dev --no-deps server.js",
+    "start": "node-dev --no-deps babel.js",
     "postinstall": "npm run build"
   },
   "author": "Lari Hoppula",
@@ -22,28 +22,28 @@
     "node-dev": "^2.6.1"
   },
   "dependencies": {
-    "babel": "^5.0.9",
+    "babel": "^5.2.17",
     "babelify": "^6.0.2",
-    "body-parser": "^1.9.3",
-    "browserify": "^6.3.3",
-    "catw": "^0.2.0",
+    "body-parser": "^1.12.3",
+    "browserify": "^10.1.3",
+    "catw": "^1.0.0",
     "cerebellum": "sc5/cerebellum",
-    "compression": "^1.2.1",
+    "compression": "^1.4.3",
     "connect-mongostore": "^0.1.4",
-    "cookie-parser": "^1.3.3",
-    "dotenv": "^0.4.0",
-    "express": "^4.10.4",
-    "express-session": "^1.9.2",
-    "less": "^2.1.1",
-    "lodash": "^2.4.1",
-    "mongoose": "^3.8.19",
-    "native-promise-only": "^0.7.6-a",
+    "cookie-parser": "^1.3.4",
+    "dotenv": "^1.1.0",
+    "express": "^4.12.3",
+    "express-session": "^1.11.1",
+    "less": "^2.5.0",
+    "lodash": "^3.8.0",
+    "mongoose": "^4.0.2",
+    "native-promise-only": "^0.7.8-a",
     "passport": "^0.2.1",
-    "passport-google-oauth": "^0.1.5",
-    "react": "^0.13.1",
-    "react-bootstrap": "^0.20.2",
+    "passport-google-oauth": "^0.2.0",
+    "react": "^0.13.2",
+    "react-bootstrap": "^0.21.2",
     "react-crouton": "^0.2.4",
-    "uglify-js": "^2.4.15",
+    "uglify-js": "^2.4.21",
     "watchify": "^3.2.1"
   },
   "browser": {
