--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
   "name": "urls-app",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "store and tag your urls, cerebellum sample app.",
   "main": "server.js",
   "scripts": {
-    "build": "npm run build_lib & npm run build_app & npm run build_less",
-    "build_min": "uglifyjs public/js/lib.js public/js/app.js -o public/js/app.min.js",
-    "build_lib": "browserify -r cerebellum -r react -r react-bootstrap -o public/js/lib.js",
-    "build_app": "browserify -x cerebellum -x react -x react-bootstrap client.js -t babelify -o public/js/app.js",
-    "build_less": "lessc less/styles.less public/css/styles.css",
-    "watch_lib": "watchify -r cerebellum -r react -r react-bootstrap -o public/js/lib.js -v",
-    "watch_app": "watchify -x cerebellum -x react -x react-bootstrap client.js -d -t babelify -o public/js/app.js -v",
-    "watch_less": "catw -c 'lessc -' 'less/styles.less' -o public/css/styles.css -v",
-    "watch": "npm run watch_app & npm run watch_lib & npm run watch_less",
+    "build": "webpack --progress --colors -p",
+    "watch": "node dev-server.js",
     "start": "node-dev --no-deps babel.js",
     "postinstall": "npm run build"
   },
   "author": "Lari Hoppula",
   "license": "MIT",
   "devDependencies": {
-    "node-dev": "^2.6.1"
+    "autoprefixer-core": "^5.1.11",
+    "babel-core": "^5.4.3",
+    "babel-loader": "^5.1.2",
+    "css-loader": "^0.12.1",
+    "extract-text-webpack-plugin": "^0.8.0",
+    "file-loader": "^0.8.1",
+    "json-loader": "^0.5.1",
+    "node-dev": "^2.6.1",
+    "node-libs-browser": "^0.5.0",
+    "postcss-css-variables": "^0.3.5",
+    "postcss-import": "^5.2.2",
+    "postcss-loader": "^0.4.3",
+    "postcss-nested": "^0.3.1",
+    "react-hot-loader": "^1.2.7",
+    "request": "^2.55.0",
+    "style-loader": "^0.12.2",
+    "webpack": "^1.9.6",
+    "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
     "babel": "^5.2.17",
-    "babelify": "^6.0.2",
     "body-parser": "^1.12.3",
-    "browserify": "^10.1.3",
-    "catw": "^1.0.0",
     "cerebellum": "sc5/cerebellum",
     "compression": "^1.4.3",
     "connect-mongostore": "^0.1.4",
@@ -34,7 +41,6 @@
     "dotenv": "^1.1.0",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
-    "less": "^2.5.0",
     "lodash": "^3.8.0",
     "mongoose": "^4.0.2",
     "native-promise-only": "^0.7.8-a",
@@ -42,9 +48,7 @@
     "passport-google-oauth": "^0.2.0",
     "react": "^0.13.2",
     "react-bootstrap": "^0.21.2",
-    "react-crouton": "^0.2.4",
-    "uglify-js": "^2.4.21",
-    "watchify": "^3.2.1"
+    "react-crouton": "^0.2.4"
   },
   "browser": {
     "./config/api.js": "./config/api-browser.js"
