--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel": "^5.2.17",
     "body-parser": "^1.12.3",
     "cerebellum": "sc5/cerebellum",
+    "cerebellum-react": "^1.1.0",
     "compression": "^1.4.3",
     "connect-mongostore": "^0.1.4",
     "cookie-parser": "^1.3.4",
