--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "dependencies": {
     "babel": "^5.2.17",
     "body-parser": "^1.12.3",
-    "cerebellum": "sc5/cerebellum",
-    "cerebellum-react": "^1.1.0",
+    "cerebellum": "^0.9.0",
+    "cerebellum-react": "^1.2.0",
     "compression": "^1.4.3",
     "connect-mongostore": "^0.1.4",
     "cookie-parser": "^1.3.4",
