--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
     "babel-core": "^5.4.3",
+    "babel-eslint": "^3.1.18",
     "babel-loader": "^5.1.2",
     "css-loader": "^0.12.1",
+    "eslint": "^0.23.0",
+    "eslint-plugin-react": "^2.5.2",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
     "json-loader": "^0.5.1",
