--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-core": "^5.4.3",
     "babel-eslint": "^3.1.18",
     "babel-loader": "^5.1.2",
-    "css-loader": "^0.12.1",
+    "css-loader": "^0.15.1",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "extract-text-webpack-plugin": "^0.8.0",
@@ -30,9 +30,9 @@
     "postcss-nested": "^0.3.1",
     "react-hot-loader": "^1.2.7",
     "request": "^2.55.0",
-    "style-loader": "^0.12.2",
-    "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
     "babel": "^5.2.17",
@@ -42,6 +42,7 @@
     "compression": "^1.4.3",
     "connect-mongostore": "^0.1.4",
     "cookie-parser": "^1.3.4",
+    "css-modules-require-hook": "^1.0.2",
     "dotenv": "^1.1.0",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
@@ -51,7 +52,11 @@
     "omniscient": "^3.2.0",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.2.0",
-    "react": "^0.13.2",
+    "postcss": "^4.1.16",
+    "postcss-modules-extract-imports": "0.0.5",
+    "postcss-modules-local-by-default": "0.0.11",
+    "postcss-modules-scope": "0.0.8",
+    "react": "^0.13.3",
     "react-bootstrap": "^0.21.2",
     "react-crouton": "^0.2.4"
   },
