--- a/package.json
+++ b/package.json
@@ -12,47 +12,49 @@
   "author": "Lari Hoppula",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer-core": "^5.1.11",
-    "babel-core": "^5.4.3",
-    "babel-eslint": "^3.1.18",
-    "babel-loader": "^5.1.2",
-    "css-loader": "^0.12.1",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
-    "extract-text-webpack-plugin": "^0.8.0",
-    "file-loader": "^0.8.1",
-    "json-loader": "^0.5.1",
-    "node-dev": "^2.6.1",
-    "node-libs-browser": "^0.5.0",
-    "postcss-css-variables": "^0.3.5",
-    "postcss-import": "^5.2.2",
-    "postcss-loader": "^0.4.3",
-    "postcss-nested": "^0.3.1",
-    "react-hot-loader": "^1.2.7",
-    "request": "^2.55.0",
-    "style-loader": "^0.12.2",
-    "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "autoprefixer-core": "^6.0.1",
+    "babel-core": "^5.8.35",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^5.4.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.15.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "node-dev": "^2.6.2",
+    "node-libs-browser": "^1.0.0",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-import": "^7.1.3",
+    "postcss-loader": "^0.8.0",
+    "postcss-nested": "^1.0.0",
+    "react-hot-loader": "^1.3.0",
+    "request": "^2.67.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "babel": "^5.2.17",
-    "body-parser": "^1.12.3",
-    "cerebellum": "^0.9.0",
-    "cerebellum-react": "^1.2.0",
-    "compression": "^1.4.3",
+    "babel": "^5.8.35",
+    "body-parser": "^1.14.2",
+    "cerebellum": "0.10.0",
+    "cerebellum-react": "1.4.0",
+    "compression": "^1.6.1",
     "connect-mongostore": "^0.1.4",
-    "cookie-parser": "^1.3.4",
-    "dotenv": "^1.1.0",
-    "express": "^4.12.3",
-    "express-session": "^1.11.1",
-    "lodash": "^3.8.0",
-    "mongoose": "^4.0.2",
-    "native-promise-only": "^0.7.8-a",
-    "passport": "^0.2.1",
+    "cookie-parser": "^1.4.1",
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.3.6",
+    "native-promise-only": "^0.8.1",
+    "passport": "^0.3.2",
     "passport-google-oauth": "^0.2.0",
-    "react": "^0.13.2",
-    "react-bootstrap": "^0.21.2",
-    "react-crouton": "^0.2.4"
+    "react": "^0.14.6",
+    "react-bootstrap": "^0.28.2",
+    "react-crouton": "^0.2.7",
+    "react-dom": "^0.14.6",
+    "react-pure-render": "^1.0.2"
   },
   "browser": {
     "./config/api.js": "./config/api-browser.js"
