--- a/package.json
+++ b/package.json
@@ -12,26 +12,11 @@
   "author": "Lari Hoppula",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^5.8.35",
     "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^5.4.0",
-    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.15.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
     "node-dev": "^2.6.2",
-    "node-libs-browser": "^1.0.0",
-    "postcss-css-variables": "^0.5.1",
-    "postcss-import": "^7.1.3",
-    "postcss-loader": "^0.8.0",
-    "postcss-nested": "^1.0.0",
     "react-hot-loader": "^1.3.0",
-    "request": "^2.67.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
@@ -54,7 +39,22 @@
     "react-bootstrap": "^0.28.2",
     "react-crouton": "^0.2.7",
     "react-dom": "^0.14.6",
-    "react-pure-render": "^1.0.2"
+    "react-pure-render": "^1.0.2",
+    "request": "^2.67.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.12",
+    "node-libs-browser": "^1.0.0",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-import": "^7.1.3",
+    "postcss-loader": "^0.8.0",
+    "postcss-nested": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "babel-loader": "^5.4.0",
+    "css-loader": "^0.23.1",
+    "autoprefixer-core": "^6.0.1",
+    "babel-core": "^5.8.35"
   },
   "browser": {
     "./config/api.js": "./config/api-browser.js"
