--- a/package.json
+++ b/package.json
@@ -20,21 +20,33 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "autoprefixer-core": "^6.0.1",
     "babel": "^5.8.35",
+    "babel-core": "^5.8.35",
+    "babel-loader": "^5.4.0",
     "body-parser": "^1.14.2",
     "cerebellum": "0.10.0",
     "cerebellum-react": "1.4.0",
     "compression": "^1.6.1",
-    "connect-mongostore": "^0.1.4",
+    "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
+    "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "lodash": "^3.10.1",
     "mongoose": "^4.3.6",
     "native-promise-only": "^0.8.1",
+    "node-libs-browser": "^1.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^0.2.0",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-import": "^7.1.3",
+    "postcss-loader": "^0.8.0",
+    "postcss-nested": "^1.0.0",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-crouton": "^0.2.7",
@@ -42,19 +54,7 @@
     "react-pure-render": "^1.0.2",
     "request": "^2.67.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "node-libs-browser": "^1.0.0",
-    "postcss-css-variables": "^0.5.1",
-    "postcss-import": "^7.1.3",
-    "postcss-loader": "^0.8.0",
-    "postcss-nested": "^1.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "babel-loader": "^5.4.0",
-    "css-loader": "^0.23.1",
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^5.8.35"
+    "webpack": "^1.12.12"
   },
   "browser": {
     "./config/api.js": "./config/api-browser.js"
